<resources>
    <string name="app_name">Movie Tracker</string>
    <string name="home_title">Home</string>
    <string name="add_edit_movie">Movie details</string>

    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>
    <string name="menu_settings">Settings</string>
    <string name="click_on">Click on:</string>
    <string name="btn_delete">Delete</string>
    <string name="msg_delete_movie">Movie deleted"</string>

    <string name="list_title">Movies</string>
    <string name="empty_list">No movies yet. Add one!</string>
    <string name="msg_add_movie">Go to add movie</string>

    <string name="hint_original_title">Original title</string>
    <string name="hint_spanish_title">Spanish title</string>
    <string name="hint_director">Director</string>
    <string name="hint_year">Year</string>
    <string name="error_required_field">This field is required</string>

    <string name="prefix_director">Dir:</string>

    <string name="invalid_year">Invalid year</string>

    <string name="movie_saved">Movie saved</string>
    <string name="movie_updated">Movie updated</string>

    <string name="change_language">Change language</string>
    <string name="spanish">Spanish</string>
    <string name="english">English</string>
    <string name="export_import_title">Export or import movies</string>
    <string name="btn_export">Export to CSV</string>
    <string name="btn_import">Import from CSV</string>

    <string name="import_success">Imported: %d movies</string>
    <string name="import_error">Error importing: %s</string>
    <string name="export_success">Export completed successfully</string>
    <string name="export_error">Error exporting: %s</string>

</resources>