<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_language"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="32dp"/>

    <Button
        android:id="@+id/btn_spanish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spanish" />

    <Button
        android:id="@+id/btn_english"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/english" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/export_import_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btn_export_csv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_export"
        app:icon="@android:drawable/ic_menu_save" />

    <Button
        android:id="@+id/btn_import_csv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/btn_import"
        app:icon="@android:drawable/ic_menu_add" />

</LinearLayout>