<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/listFragment">

    <fragment
        android:id="@+id/listFragment"
        android:name="com.curro.movietracker.ui.list.ListFragment"
        android:label="@string/home_title"
        tools:layout="@layout/fragment_list">
        <action
            android:id="@+id/action_list_to_add_edit"
            app:destination="@id/addEditFragment" />
    </fragment>

    <fragment
        android:id="@+id/addEditFragment"
        android:name="com.curro.movietracker.ui.add.AddEditFragment"
        android:label="@string/add_edit_movie"
        tools:layout="@layout/fragment_add_edit" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.curro.movietracker.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>